repos/emily-python/contents/test/reader/fail/cmdline.em
# Test interpreter arg parse

# Arg: --garbage-argument
# Expect failure
